--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="container">
             <div class="row">
-                <div class="col-md-6"><img src="assets/img/albert-dera-ILip77SbmOE-unsplash.jpg" style="padding: 40px;"></div>
+                <div class="col-md-6"><img src="assets/img/dp.jpg" style="padding: 40px;"></div>
                 <div class="col-md-6">
                     <div id="about">
                         <div class="container-fluid py-5">
@@ -56,7 +56,7 @@
                         <div class="card mb-5">
                             <div class="card-body p-sm-5">
                                 <h2 class="text-center mb-4" style="font-family: Montserrat, sans-serif;font-weight: bold;">Contact us</h2>
-                                <form method="post">
+                                <form id = "gform" method="post" action="https://script.google.com/macros/s/AKfycbxd6t2HpWDivldYgZiehgB5JIZGaO2ZjsLi4zSZwO0Y7Z_0AcX0cfEFLg_iwtc6xLpF/exec">
                                     <div class="mb-3"><input class="form-control" type="text" id="name-2" name="name" placeholder="Name" style="font-family: Poppins, sans-serif;"></div>
                                     <div class="mb-3"><input class="form-control" type="email" id="email-2" name="email" placeholder="Email" style="font-family: Poppins, sans-serif;"></div>
                                     <div class="mb-3"><textarea class="form-control" id="message-2" name="message" rows="6" placeholder="Purpose" style="font-family: Poppins, sans-serif;"></textarea></div>
