--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <h2 class="text-center mb-4" style="font-family: Montserrat, sans-serif;font-weight: bold;">Contact us</h2>
                                 <form id = "submit-form" action="">
                                     <div class="mb-3"><input class="form-control" type="text" id="name-2" name="name" placeholder="Name" style="font-family: Poppins, sans-serif;"></div>
-                                    <div class="mb-3"><input class="form-control" type="number" id="number-2" name="number" placeholder="Number" style="font-family: Poppins, sans-serif;"></div>
+                                    <div class="mb-3"><input class="form-control" type="text" id="number-2" name="number" placeholder="Number" style="font-family: Poppins, sans-serif;"></div>
                                     <div class="mb-3"><textarea class="form-control" id="message-2" name="message" rows="6" placeholder="Purpose" style="font-family: Poppins, sans-serif;"></textarea></div>
                                     <div><button class="btn btn-primary d-block w-100" type="submit" style="background: #212223;font-family: Poppins, sans-serif;font-weight: bold;">Send </button></div>
                                 </form>
