--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 <h2 class="text-center mb-4" style="font-family: Montserrat, sans-serif;font-weight: bold;">Contact us</h2>
                                 <form id = "gform" method="post" action="https://script.google.com/macros/s/AKfycbxd6t2HpWDivldYgZiehgB5JIZGaO2ZjsLi4zSZwO0Y7Z_0AcX0cfEFLg_iwtc6xLpF/exec">
                                     <div class="mb-3"><input class="form-control" type="text" id="name-2" name="name" placeholder="Name" style="font-family: Poppins, sans-serif;"></div>
-                                    <div class="mb-3"><input class="form-control" type="text" id="email-2" name="number" placeholder="Number" style="font-family: Poppins, sans-serif;"></div>
+                                    <div class="mb-3"><input class="form-control" type="email" id="email-2" name="email" placeholder="Email" style="font-family: Poppins, sans-serif;"></div>
                                     <div class="mb-3"><textarea class="form-control" id="message-2" name="message" rows="6" placeholder="Purpose" style="font-family: Poppins, sans-serif;"></textarea></div>
                                     <div><button class="btn btn-primary d-block w-100" type="submit" style="background: #212223;font-family: Poppins, sans-serif;font-weight: bold;">Send </button></div>
                                 </form>
